[WinCairo][Clang] html/canvas/WebGLDrawBuffers.cpp(77,29): error: non-constant-expression cannot be narrowed from type 'WebCore::GraphicsContextGL::(anonymous enum at GraphicsContextGL.h:64:5)' to 'GCGLenum' (aka 'unsigned int') in initializer list https://bugs.webkit.org/show_bug.cgi?id=219320

Unreviewed build fix for WinCairo clang-cl build.

* html/canvas/WebGLDrawBuffers.cpp:
(WebCore::WebGLDrawBuffers::drawBuffersWEBGL): Added static_cast<GCGLenum> for the initializer list.

Canonical link: https://commits.webkit.org/231913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270204 268f45cc-cd09-0410-ab3c-d52691b4dbfc